# listeria_rs

./: .gitignore  Cargo.toml  Dockerfile.single_wiki  LICENSE  README.md  README.single_wiki.md  build.sh  config.json.template  listeria.code-workspace  restart.sh  run_single.sh
.trunk/: trunk.yaml
audits/: solid-audit.md
benches/: benchmarks.rs
src/: circuit_breaker.rs  column.rs  column_type.rs  configuration.rs  database_pool.rs  entity_container_wrapper.rs  entity_file_cache.rs  lib.rs  list_processor.rs  listeria_bot.rs  listeria_bot_single.rs  listeria_bot_wiki.rs  listeria_bot_wikidata.rs  listeria_error.rs  listeria_list.rs  listeria_page.rs  main_commands.rs  my_entity.rs  page_element.rs  page_operations.rs  page_params.rs  page_to_process.rs  pagestatus_repository.rs  profiling_service.rs  reference.rs  render_context.rs  render_tabbed_data.rs  render_wikitext.rs  renderer.rs  result_cell.rs  result_cell_part.rs  result_generator.rs  result_row.rs  results.rs  retry.rs  site_matrix.rs  sparql_results.rs  sparql_table.rs  sparql_value.rs  status_server.rs  (+8 more)
src/list_processor/: autodesc.rs  links.rs  references.rs  regions.rs  sections.rs  shadow_files.rs  sort.rs
src/result_cell_part/: from_snak.rs  mod.rs  render.rs  types.rs
test_data/: alias_lang.fixture  autodesc.fixture  column_header.fixture  columns.fixture  commons.fixture  commons_sparql.fixture  coordinates.fixture  curly_braces.fixture  date_extid_quantity.fixture  dewiki.fixture  dewiki_coordinates.fixture  edit_wikitext.fixture  entities.tab  header_row_template.fixture  header_template.fixture  image_pipe.fixture  item.fixture  item_column.fixture  links_all.fixture  links_local.fixture  links_reasonator.fixture  links_red.fixture  links_red_only.fixture  links_text.fixture  multiple_lists.fixture  p_p.fixture  p_q_p.fixture  preferred_rank.fixture  qid.fixture  references.fixture  row_template_no_cell_attrs.fixture  sections.fixture  shadow_images.fixture  sitelink_column.fixture  sort_family_name.fixture  sort_label.fixture  sort_label_case_insensitive.fixture  sort_prop.fixture  sort_prop_item.fixture  sort_prop_monolingual.fixture  (+9 more)
