[package]
name = "listeria"
version = "0.1.3"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2024"

[dependencies]
async-trait = "*"
async-recursion = "*"
regex = "^1"
chrono = "*"
config = "*"
dashmap = "*"
era_date = "*"
foyer = { version = "*", features = ["serde"] }
rand = "*"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
urlencoding = "^2"
wikimisc = { git = "https://github.com/magnusmanske/wikimisc" }
tokio = { version = "^1", features = ["full", "rt-multi-thread"] }
futures = "*"
mysql_async = "*"
md5 = "*"
tempfile = "*"
anyhow = "*"
reqwest = { version = "*", features = ["gzip", "deflate", "brotli"] }
log = "*"
sysinfo = "*"
clap = { version = "*", features = ["derive"] }
axum = { version = "*", features = [
	"http1",
	"http2",
	"tokio",
	"json",
	"macros",
] }
tower-http = { version = "*", features = ["full"] }
html-escape = "*"

[dev-dependencies]
wiremock = "0.6"
http = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1

[profile.bench]
lto = 'thin'
codegen-units = 1
