[package]
name = "listeria"
version = "0.1.3"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2024"

[dependencies]
async-trait = "0.1"
async-recursion = "1"
regex = "^1"
chrono = "0.4"
dashmap = "6"
era_date = "0.1"
foyer = { version = "0.22", features = ["serde"] }
rand = "0.9"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
percent-encoding = "2"
wikimisc = { git = "https://github.com/magnusmanske/wikimisc" }
tokio = { version = "^1", features = ["full", "rt-multi-thread"] }
futures = "0.3"
mysql_async = "0.36"
blake3 = "1"
tempfile = "3"
anyhow = "^1"
reqwest = { version = "0.13", features = ["gzip", "deflate", "brotli"] }
log = "0.4"
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = [
	"http1",
	"http2",
	"tokio",
	"json",
	"macros",
] }
tower-http = { version = "0.6", features = ["full"] }

[dev-dependencies]
wiremock = "0.6"
http = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1

[profile.bench]
lto = 'thin'
codegen-units = 1
